Added a really fancy value converter (DictionaryConverter.cs) that changes the way humans think about life and the universe.
No, really, it's a game-changer

--- a/Client/Styles/TextBlocks.axaml
+++ b/Client/Styles/TextBlocks.axaml
@@ -64,4 +64,8 @@
       <Setter Property="FontSize" Value="14.0" />
       <Setter Property="Margin" Value="0 0 0 8" />
    </Style>
+
+   <Style Selector="TextBlock.Unstyled">
+      <Setter Property="Margin" Value="0.0" />
+   </Style>
 </Styles>
