--- a/Client/View/Content/Login/Templates/TitleTemplate.axaml
+++ b/Client/View/Content/Login/Templates/TitleTemplate.axaml
@@ -18,6 +18,7 @@
                           Classes="Subtitle"
                           Inlines="{TemplateBinding Subtitle}" />
                <ContentPresenter Grid.Row="2"
+                                 Margin="0 20.0 0 0"
                                  Content="{TemplateBinding Content}" />
             </Grid>
          </ControlTemplate>
