--- a/Client/View/LoginWindow.axaml
+++ b/Client/View/LoginWindow.axaml
@@ -1,7 +1,6 @@
 ﻿<Window xmlns="https://github.com/avaloniaui"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:vm="clr-namespace:Client.ViewModel"
-        xmlns:utility="clr-namespace:Client.Converter"
         xmlns:controls="clr-namespace:Client.View.Controls"
         x:Class="Client.View.LoginWindow"
         ExtendClientAreaChromeHints="OSXThickTitleBar, NoChrome"
@@ -16,10 +15,6 @@
       <vm:LoginWindowViewModel />
    </Design.DataContext>
 
-   <Window.Resources>
-      <utility:InstanceExistsConverter x:Key="IsNotNull" />
-   </Window.Resources>
-
    <Panel>
       <Border
          Background="{DynamicResource Dark}"
@@ -31,7 +26,7 @@
                         Loaded="MenuBar_OnLoaded">
                <Button Click="BackButton_OnClick"
                        IsVisible="{Binding Content.Back,
-                       Converter={StaticResource IsNotNull}}"
+                       Converter={x:Static ObjectConverters.IsNotNull}}"
                        Width="38.0" Height="38.0"
                        Padding="10.0"
                        Classes="Unstyled">
