--- a/Client/View/LoginWindow.axaml
+++ b/Client/View/LoginWindow.axaml
@@ -55,6 +55,7 @@
          </TransitioningContentControl>
 
          <Border Grid.Row="2"
+                 Background="{DynamicResource Dark}"
                  BorderThickness="0 1.0 0 0"
                  BorderBrush="{DynamicResource Border}"
                  Padding="5.0">
