--- a/Client/View/Content/Login/ConnectPanel.axaml
+++ b/Client/View/Content/Login/ConnectPanel.axaml
@@ -10,6 +10,7 @@
    xmlns:model="clr-namespace:Client.Model"
    xmlns:system="clr-namespace:System;assembly=System.Runtime"
    xmlns:generic="clr-namespace:System.Collections.Generic;assembly=System.Collections"
+   xmlns:extensions="clr-namespace:Client.Extensions"
    x:Class="Client.View.Content.Login.ConnectPanel">
 
    <Design.DataContext>
@@ -22,6 +23,12 @@
 
    <UserControl.Resources>
       <converter:DictionaryConverter x:Key="ConnectionStatusConverter" />
+      <Cursor x:Key="HandCursor">
+         <x:Arguments>
+            <StandardCursorType>Hand</StandardCursorType>
+         </x:Arguments>
+      </Cursor>
+      <SolidColorBrush x:Key="FailedBackground">#22E86F58</SolidColorBrush>
    </UserControl.Resources>
 
    <templates:TitleTemplate>
@@ -42,14 +49,28 @@
                     VerticalScrollBarVisibility="Hidden">
          <ItemsControl ItemsSource="{Binding ConnectionViewModel.ConnectionSteps}">
             <ItemsControl.ItemTemplate>
-               <DataTemplate>
+               <DataTemplate x:DataType="model:ConnectionStep">
                   <Border Padding="0.0 8.0"
-                          Background="Transparent"
+                          CornerRadius="6.0"
                           Margin="0 0 0 10.0"
                           PointerPressed="InputElement_OnPointerPressed">
+                     <Border.Background>
+                        <Binding Path="Status"
+                                 Converter="{StaticResource ConnectionStatusConverter}">
+                           <Binding.ConverterParameter>
+                              <generic:Dictionary x:TypeArguments="model:ConnectionStatus, system:Object">
+                                 <StaticResource x:Key="{x:Static model:ConnectionStatus.Failed}"
+                                                 ResourceKey="FailedBackground" />
+                              </generic:Dictionary>
+                           </Binding.ConverterParameter>
+                        </Binding>
+                     </Border.Background>
                      <Grid ColumnDefinitions="Auto, *"
                            RowDefinitions="Auto, Auto"
-                           Cursor="Hand">
+                           Cursor="{extensions:Conditional {CompiledBinding 
+                           Path=Helplink,
+                           ConverterParameter={x:Type system:String}},
+                           True={StaticResource HandCursor}, False=''}">
                         <controls:Icon Grid.Row="0" Grid.Column="0"
                                        Margin="8.0 0.0"
                                        VerticalAlignment="Center">
